# Aurafin.rs

./: .gitignore  Cargo.toml  README.md  test_api.py  test_api.sh
data/: portfolio.json
src/: handlers.rs  main.rs  models.rs  services.rs  utils.rs
src/models/: mod.rs
src/routes/: mod.rs  portfolio.rs  research.rs  watchlist.rs
src/services/: mod.rs  portfolio_service.rs  research_service.rs  watchlist_service.rs
